--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.483.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -34,6 +35,7 @@
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.13.3",
     "sass": "^1.77.8",
     "styled-components": "^6.1.15",
