--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "recharts": "^2.13.3",
     "sass": "^1.77.8",
     "styled-components": "^6.1.15",
+    "swiper": "^11.2.6",
     "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
